fix: adjust header spacing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,13 +21,19 @@ html {
 }
 
 .emby-tab-button {
-  padding-top: 0;
+  padding-top: 0.75em;
   padding-bottom: 0.75em;
 }
 
 .skinHeader-withBackground {
   background-color: #101010d0;
   backdrop-filter: blur(15px);
+}
+
+@media (min-width: 100em) {
+  .headerTabs {
+    margin-top: -2.3em !important;
+  }
 }
 
 .pageTabContent > .padded-top {
